# libirc

./: .gitignore  CMakeLists.txt  LICENCE.md  README.md  vcpkg.json
include/libirc/: auth.hpp  logging.hpp  message.hpp  server.hpp  version.hpp
src/: main.cpp  message.cpp  server.cpp
src/logging/: common.cpp  console_logger.cpp
src/protocol/: parser.cpp  parser.hpp
src/server/: server_session.cpp  server_session.hpp
